webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-app
  namespace: music-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: music-app
  template:
    metadata:
      labels:
        app: music-app
    spec:
      containers:
      - name: music-app
        image: asafkara/music-server:latest
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: music-app-service
  namespace: music-app
spec:
  selector:
    app: music-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
    nodePort: 30080  # Manually set a NodePort (between 30000-32767)
  type: NodePort  # Expose service outside the cluster
